add reset button

--- a/Server/views/index.hbs
+++ b/Server/views/index.hbs
@@ -871,6 +871,7 @@ oth.setAttribute('name','others')
  <div class='container text-center mt-3' >
  <button class='btn btn-primary btn-lg' onclick="generateCV()">Generate CV</button>
  </div>  
+ 
  </form>
 </body>
 
@@ -1037,7 +1038,14 @@ oth.setAttribute('name','others')
 Print cv
 </button>
 </div>
+<form >
+<div class='container mt-3 text-center'>
+<button class="btn " style="background-color:aquamarine" type='button' onclick='window.location.reload()'>
+Reset Form
+</button>
+</div>
 
+</form>
 <div class='col-md-8'>
 </div>
 </div>
