--- a/Server/views/resu.hbs
+++ b/Server/views/resu.hbs
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <h1>Query Results</h1>
         <ul>{{#each objects}}
             <li>
-                {{member_id}},{{name}}, {{gpa}}, {{state}},{{country}},{{email}},{{objective}},{{imgurl}},{{isemployed}}
+                {{member_id}},
+                {{name}},
+                {{gpa}},
+                {{state}},
+                {{country}},
+                {{email}},
+                {{objective}},
+                {{imgurl}},
+                {{isemployed}}
             </li>
-            
-             {{/each}}
+            {{/each}}
         </ul>
     </div>
 </body>
+
 </html>
