commiting final changes

--- a/Server/views/index.hbs
+++ b/Server/views/index.hbs
@@ -990,6 +990,12 @@
         </button>
       </div>
 
+      <div class='container mt-3 text-center'>
+        <button class="btn " style="background-color:aquamarine" onclick="window.location.reload()">
+          Reset Form
+        </button>
+      </div>
+
       <div class='col-md-8'>
       </div>
     </div>
